# Guskov_Labs_Sem_2

./: README.md
lab1/: CMakeLists.txt  main.cpp
lab1/hohma/: CMakeLists.txt  hohma.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/candidate/: CMakeLists.txt  Candidate.cpp  Candidate.h
lab2/planet/: CMakeLists.txt  Planet.cpp  Planet.h
lab3/: main.cpp
lab3/fraction/: fraction.cpp  fraction.h
lab4/: CMakeLists.txt  main.cpp
lab4/stack/: CMakeLists.txt  Stack.cpp  Stack.h
lab5/: CMakeLists.txt  main.cpp
lab5/lib/: CMakeLists.txt  MySet.h  MyVector.h
randomProject/: CMakeLists.txt  main.cpp
randomProject/h/: hohma.h
